--- a/scripts/package/truenas/changelog
+++ b/scripts/package/truenas/changelog
@@ -1,3 +1,9 @@
+linux-5.10.93+truenas (5.10.93+truenas-1) sid; urgency=low
+
+  * Merge upstream v5.10.93
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Fri, 28 Jan 2022 12:00:00 -0500
+
 linux-5.10.81+truenas (5.10.81+truenas-1) sid; urgency=low
 
   * Merge upstream v5.10.81
