--- a/scripts/package/truenas/changelog
+++ b/scripts/package/truenas/changelog
@@ -1,3 +1,9 @@
+linux-5.15.62+truenas (5.15.62+truenas-2) sid; urgency=low
+
+  * Change target SATA mobile link power management policy to max_performance
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 1 Nov 2022 12:00:00 -0500
+
 linux-5.10.42+truenas (5.10.42+truenas-3) sid; urgency=low
 
   * Merge upstream v5.10.42
