--- a/scripts/package/truenas/changelog
+++ b/scripts/package/truenas/changelog
@@ -1,8 +1,68 @@
+linux-6.1.24+truenas (6.1.24+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v6.1.24
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Thu, 19 Apr 2023 12:00:00 -0500
+
+linux-5.15.79+truenas (5.15.79+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.79
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Fri, 18 Nov 2022 12:00:00 -0500
+
 linux-5.15.62+truenas (5.15.62+truenas-2) sid; urgency=low
 
   * Change target SATA mobile link power management policy to max_performance
 
  -- iXsystems engineering team <dev@ixsystems.com>  Tue, 1 Nov 2022 12:00:00 -0500
+
+linux-5.15.62+truenas (5.15.62+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.62
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 23 Aug 2022 12:00:00 -0500
+
+linux-5.15.45+truenas (5.15.45+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.45
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 7 Jun 2022 12:00:00 -0500
+
+linux-5.15.44+truenas (5.15.44+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.44
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 2 Jun 2022 12:00:00 -0500
+
+linux-5.15.34+truenas (5.15.34+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.34
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 19 Apr 2022 12:00:00 -0500
+
+linux-5.15.32+truenas (5.15.32+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.32
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Mon, 28 Mar 2022 12:00:00 -0500
+
+linux-5.15.26+truenas (5.15.26+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.26
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 8 Mar 2022 12:00:00 -0500
+
+linux-5.14.8+truenas (5.14.8+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.14.8
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 6 Aug 2021 12:00:00 -0500
+
+linux-5.10.58+truenas (5.10.58+truenas-1) sid; urgency=low
+
+  * Merge upstream v5.10.58
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Tue, 17 Aug 2021 12:00:00 -0500
 
 linux-5.10.42+truenas (5.10.42+truenas-3) sid; urgency=low
 
