--- a/scripts/package/truenas/changelog
+++ b/scripts/package/truenas/changelog
@@ -1,3 +1,9 @@
+linux-5.15.107+truenas (5.15.107+truenas-1) sid; urgency=low
+
+  * Rebase local commits onto upstream v5.15.107
+
+ -- iXsystems engineering team <dev@ixsystems.com>  Thu, 20 Apr 2023 12:00:00 -0500
+
 linux-5.15.79+truenas (5.15.79+truenas-1) sid; urgency=low
 
   * Rebase local commits onto upstream v5.15.79
